# ytdwt

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: static.yml
ghpage/: index.html
src/: app.rs  config.rs  downloader.rs  main.rs
